@@ -228,12 +228,19 @@ dependencies {
   testImplementation group: 'org.springframework.security', name: 'spring-security-test'
   testImplementation group: 'io.github.hakky54', name: 'logcaptor', version: '2.9.2'
   testImplementation group: 'org.apiguardian', name: 'apiguardian-api', version: '1.1.2'
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.0', classifier: 'all'
 
   functionalTestImplementation sourceSets.main.runtimeClasspath
   functionalTestImplementation sourceSets.test.runtimeClasspath
 
   smokeTestImplementation sourceSets.main.runtimeClasspath
   smokeTestImplementation sourceSets.test.runtimeClasspath
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 bootJar {
